test/fail/local-shadow.rnp
let a = 1;
{
  let a = 1;
}
---
SyntaxError: Cannot shadow or redeclare a
 --> fail/local-shadow.rnp:3:7
  |
3 |   let a = 1;
  |       ^ Cannot shadow or redeclare a
  |
